# MarkPad

./: BUILD.md  PDF_EXPORT_README.md  README.md  README.zh-CN.md  TAG_GROUP_GUIDE.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
docs/: COMPLETED.md  MARKDOWN_STYLE_TEST.md  changelog.md  development.md  requirements.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: ContextMenu.tsx  Editor.tsx  ExportProgress.tsx  FolderModal.tsx  ImageGallery.tsx  Modal.tsx  NoteList.tsx  ProjectModal.tsx  Sidebar.tsx  TagModal.tsx  TypeModal.tsx  index.ts
src/hooks/: useDataPersistence.ts
src/store/: index.ts
src/types/: index.ts
src/utils/: imageHelper.ts  index.ts
