[package]
name = "markpad"
version = "0.1.0"
description = "A Markdown note-taking desktop app"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "markpad_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset"] }
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
